feat: htmx swap root content refactor: move login and register page to controller-authentication refactor: remove register account api
